--- a/trunk/README
+++ b/trunk/README
@@ -348,18 +348,20 @@ locally:
 * Tim Read
 * Geoff Foster
 
-For their ansys-mod.el from 1997 which gave the idea to ANSYS-Mode
-(the implementation is different and vastly extended)
+For their ansys-mod.el from 1997 which gave the ideas to start
+ANSYS-Mode (the implementation though is different and many
+capabilities are new or extended)
 
 Then in mainly reversed cronological order:
 
+* Michael Kidner
 * Ilya Gurin
 * Alex Schroeder
 * Holger Sparr
 * Eli Zaretzki
 * Markus Triska
 * Mathias Dahl
-* rms
+* RMS
 
 == Resources ==
 
