--- a/NEWS
+++ b/NEWS
@@ -7,8 +7,8 @@ Copyright (C) 2006 - 2012  H. Dieter Wilhelm, GPL V3
 ===  Version 14.5.1 ===
 
 * Added a function (C-c C-b) showing the detailed ANSYS help in your
-  web-browser for an APDL command or element name (the element number
-  is enough) around the cursor
+  web-browser for an APDL command or element name (also the element
+  number is sufficient) around the cursor or at the line beginning.
 
   Are you also tired of the ANSYS help browser?  E. g. try searching for
   the `F' APDL command, it is impossible!  You have to pick it up from
@@ -40,8 +40,9 @@ Copyright (C) 2006 - 2012  H. Dieter Wilhelm, GPL V3
   blocks.  They are now alternatives to `ansys-number-block-start' C-c
   { and C-c } respectively
 
-* Removed bug in customisation system and dropped 32 bit ANSYS
-  support
+* Removed bug in customisation system and dropped 32 bit ANSYS support
+  in line with the ANSYS OS
+  [http://www.ansys.com/Support/Platform+Support strategy] for 2013.
 
 === Version 14.0.1 June 2012 ===
 
